# cmu_15418

./: .gitignore  README.md
6.824/src/main/: wc.go
asst1/: CMakeLists.txt
asst1/prog1_mandelbrot_threads/: CMakeLists.txt  main.cpp  mandelbrotSerial.cpp  mandelbrotThread.cpp
asst1/prog2_vecintrin/: main.cpp
asst1/prog3_mandelbrot_ispc/: Makefile  mandelbrot.ispc
asst1/prog4_sqrt/: Makefile  main.cpp  sqrt.ispc  sqrtSerial.cpp
asst1/prog5_saxpy/: Makefile  saxpy.ispc
asst2/starter/saxpy/: saxpy.cu
asst2/starter/scan/: main.cpp  scan.cu
